# tape-rewind

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_dashboard.py
tape_rewind/: __init__.py  __main__.py  dashboard_server.py  engine.py  fetchers.py  metrics.py  registry.py  runner.py
tape_rewind/dashboard/: __init__.py  api.py  dashboard.html  frontend.py  server.py
tape_rewind/strategies/: momentum.py
